--- a/02-aulas-praticas/capitulo-23-projeto-redes-sociais/pags/twitter.html
+++ b/02-aulas-praticas/capitulo-23-projeto-redes-sociais/pags/twitter.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>twiter</title>
 </head>
 <body>
-    
+    <img src="../imgs/tela-twitter.jpg" alt="print do perfil do twitter do professor Gustavo Guanabara">
+    <a href="https://x.com/guanabara" target="_blank">ACESSE</a>
 </body>
 </html>
