--- a/02-aulas-praticas/capitulo-24-aula-2-formularios-com-label/index.html
+++ b/02-aulas-praticas/capitulo-24-aula-2-formularios-com-label/index.html
@@ -24,7 +24,7 @@
                 &lt;label <strong>for="nome da id que essa etiqueta representa"</strong>&gt; DESCRIÇÃO DA EQUIQUETA &lt;/label&gt;
                 &lt;input <strong>type="text" name="nomedessa input" id="ID dessa input"</strong>&gt;
                 
-                Nota sobre os inputs: Existem inputs de senhas, datas, tempo, textos... Além disso, os campos nome e ID podem ser IGUAIS ou diferentes, basta não se confundir na hora de fasr referência. 
+                Nota sobre os inputs: Existem inputs de senhas, datas, tempo, textos... Além disso, os campos nome e ID podem ser IGUAIS ou diferentes, basta não se confundir na hora de fazer referência. 
                 Você tem que preencher, ok? Para que as referências entre label e input estejam certas!
             &lt;/p&gt;
 
